Document standalone usage of OSIAM